# mythic-engine

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: resolve.yml
agent_client/: __init__.py  client.py  context.py  llm.py  prompt.py
chronicle/: tick-1.md
docs/: intent.md  playtest-notes.md  rubric.md
engine/: __init__.py  config.py  phase10_supremacy.py  phase11_chronicle.py  phase1_validation.py  phase2_spawn.py  phase3_recruit_fortify.py  phase4_movement.py  phase5_combat.py  phase6_claim_loot.py  phase7_yield.py  phase8_quests.py  phase9_spawn.py  resolve.py  validate.py
moves/tick-1/: force-1.yml  force-2.yml  force-3.yml
personas/: force-1.md  force-2.md  force-3.md
schema/: move.schema.json  world.schema.json
scripts/: generate_map.py  run_agent.py  run_resolve.py  seed_era.py
tests/: test_agent_client.py  test_config.py  test_map.py  test_master.py  test_phase1.py  test_phase10.py  test_phase11.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_run_resolve.py  test_seed_era.py  test_validate.py
tests/fixtures/tick_colision_espejo/: expected_delta.yml  world.yml
tests/fixtures/tick_combate_simple/: expected_delta.yml  pending_combats.yml  world.yml
tests/fixtures/tick_cronica/: expected_chronicle.md  tick_events.yml  (+1 more)
world/: era.yml
world/forces/: force-1.yml  force-2.yml  force-3.yml
world/regions/: arm-1-a.yml  arm-2-a.yml  arm-2-b.yml  arm-3-a.yml  arm-3-b.yml  capital-1.yml  capital-2.yml  capital-3.yml  ring-1.yml  ring-2.yml  ring-3.yml
(+76 files in other folders)
