[project]
name = "mythic-engine"
version = "0.1.0"
description = "Deterministic multi-agent eval presented as a continuous mythic world"
requires-python = ">=3.11"
dependencies = ["pyyaml"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
