[project]
name = "mythic-engine"
version = "0.1.0"
description = "Deterministic multi-agent eval presented as a continuous mythic world"
requires-python = ">=3.11"
dependencies = ["pyyaml", "jsonschema"]

[project.optional-dependencies]
dev = ["pytest"]
agent = ["anthropic>=0.40,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
